src/test/ui/issues/issue-23122-2.stderr
error[E0275]: overflow evaluating the requirement `<<<<<<<... as Next>::Next as Next>::Next as Next>::Next as Next>::Next as Next>::Next as Next>::Next as Next>::Next: Sized`
  --> $DIR/issue-23122-2.rs:10:17
   |
LL |     type Next = <GetNext<T::Next> as Next>::Next;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_23122_2`)
note: required for `GetNext<<<<<<... as Next>::Next as Next>::Next as Next>::Next as Next>::Next as Next>::Next>` to implement `Next`
  --> $DIR/issue-23122-2.rs:9:15
   |
LL | impl<T: Next> Next for GetNext<T> {
   |               ^^^^     ^^^^^^^^^^
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-23122-2/issue-23122-2.long-type-3976323088118947840.txt'

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
